Layout change, Mini top banner and minor fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -137,7 +137,6 @@ $pink-mid: #ffa8cb99;
 
 @mixin navbarReveal($color) {
   $animation-name: unique-id() !global;
-
   animation-name: $animation-name;
   animation-duration: 0.75s;
   animation-timing-function: ease-in-out;
@@ -233,8 +232,8 @@ h6 {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  margin-left: 5rem;
-  margin-right: 5rem;
+  max-width: 72rem; 
+  margin: 1rem auto;
 
   .home-left,
   .home-right {
@@ -251,7 +250,6 @@ h6 {
   .home-right {
     margin-left: 2.5rem;
     margin-right: 2.5rem;
-<<<<<<< HEAD
   }
 }
 
@@ -605,8 +603,6 @@ h6 {
     // height: 0.5rem;
     width: 100px;
     margin: 0.7rem 0.7rem 0.2rem 0.7rem;
-=======
->>>>>>> Added latest cases on frontpage.
   }
 }
 
@@ -637,6 +633,27 @@ h6 {
   }
 }
 
+.MiniBanner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  line-height: 1rem;
+  font-family: 'Archia';
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: $purple;
+  background: $purple-light;
+
+  .snippet {
+    align-self: center;
+    width: calc(100% - 10rem);
+    word-wrap: break-word;
+    padding: 0.3rem;
+    text-align: center;
+    cursor: pointer;
+  }
+}
+
 .Navbar {
   display: flex;
   flex-direction: row;
@@ -651,6 +668,15 @@ h6 {
   .navbar-left {
     margin-left: 2rem;
     flex: 1;
+    align-self: center;
+    max-width: 72rem; 
+    margin: 5px auto;
+
+    img {
+
+      vertical-align: middle;
+      margin-right: 2rem;
+    }
 
     a {
       display: inline-block;
@@ -2871,6 +2897,13 @@ select {
     h4 {
       color: $gray;
       font-weight: 600;
+    img {
+      width: 2rem;
+      height: 2rem;
+      margin-left: 1rem;
+      margin-right: -1rem;
+      vertical-align: middle;
+      cursor: pointer;
     }
   }
 
@@ -3157,6 +3190,28 @@ select {
       width: 100%;
       margin-left: 1rem;
       margin-right: 1rem;
+    }
+  }
+
+  .MiniBanner {
+    height: 2rem;
+
+    .snippet {
+      width: 100%;
+      margin-left: 1rem;
+      margin-right: 1rem;
+    }
+  }
+
+  .MiniBanner {
+    line-height: 1.2rem;
+    font-family: 'Archia';
+    font-size: 0.8rem;
+    height: 3rem;
+    .snippet {
+
+      padding: 1rem;
+   
     }
   }
 
