Fix hindi text and also the text for the button

--- a/src/voice/slang.css
+++ b/src/voice/slang.css
@@ -14,7 +14,7 @@
 }
 
 #slang-button::before {
-  content: 'Query with ';
+  content: 'Search with ';
   font-family: 'Archia';
   color: white !important;
   font-size: 0.7rem;
@@ -50,14 +50,14 @@
 
 }
 
-/* 
+/*
   ##Device = Low Resolution Tablets, Mobiles (Landscape)
   ##Screen = B/w 481px to 767px
 */
 
 @media (min-width: 481px) and (max-width: 767px) {}
 
-/* 
+/*
     ##Device = Most of the Smartphones Mobiles (Portrait)
     ##Screen = B/w 320px to 479px
   */
