Change from multi intent to single intent, add tested cases to possible search plus minor changes

--- a/src/voice/slang.css
+++ b/src/voice/slang.css
@@ -21,6 +21,13 @@
 
 }
 
+#slang-surface select {
+  background-color: white;
+  color: black;
+  font-family: 'Archia';
+  font-weight: 400;
+}
+
 @media only screen and (max-width: 600px) {
 
   #slang-button {
