Add zone color speak out when query for district

--- a/src/voice/slang.css
+++ b/src/voice/slang.css
@@ -28,6 +28,10 @@
   font-weight: 400;
 }
 
+#slang-bars {
+  display: none !important;
+}
+
 @media only screen and (max-width: 600px) {
 
   #slang-button {
